# patrec_time_series

./: .env  .gitignore  README.md  core_venv.txt  pyproject.toml
.reqs/: basic_venv.txt  py310.txt  py310_req.txt  py312_req.txt  py_312.txt  tsgm_req.txt
app/: main.py  schemas.py
examples/: 0_generation_module_overview.ipynb  1_segmentation_module_overvies.ipynb  2_fe_pipeline_overview.ipynb  9_utils.ipynb  FE_wtih_ts2vec.py  generate_synthetic_data.ipynb  trash.ipynb  trash_fo_fe.ipynb
experiment_scripts/: STL_decomp.ipynb  bayesian_approach.ipynb  pelt_exp1.py  segmentation.py
experiment_scripts/app/: data_prep.ipynb
experiment_scripts/stats_models/: opt_STL.py
patrec copy/: __init__.py  version.py
patrec copy/0_dummy_scripts/: interval_measure.yaml  intervals.json  utils_mlflow.ipynb
patrec copy/feature_extraction/: __init__.py  ts2vec.yaml
patrec copy/segmentation/: matrix_segm.py  segmentor_exp.py
patrec copy/utils/: loaders.py  mlflow_exp.py
patrec/0_dummy_scripts/: data_pipeline_parts.ipynb
patrec/clustering/: Base_clustering_model copy.py  Base_clustering_model.py  __init__.py  base.py  density_clustering copy.py  density_clustering.py  hierarchical_clustering.py  metrics.py  partitioning_clustering.py
patrec/feature_extraction/: __init__.py  fe_classes.py  old_fe_classes.py
patrec_ts/: __init__.py  main.py
scripts/: 0_fe_pipeline_overview.ipynb  0_generation_module_overview.ipynb  FE_wtih_ts2vec.py  MelbournePedestrian.ipynb  bayesian_app.ipynb  generate_synthetic_data.ipynb  scr.ipynb  utils.ipynb
src/: __init__.py
(+121 files in other folders)
