[tool.poetry]
name = "patrec-time-series"
version = "0.1.0"
description = "A project"
authors = ["MIAJoolio<MIAJoolio@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = ">=2.3.1,<3.0.0"
aeon = ">=1.2.0,<2.0.0"
matplotlib = ">=3.10.5,<4.0.0"
statsmodels = ">=0.14.5,<0.15.0"
tslearn = "^0.6.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mlflow = "^3.2.0"


[tool.poetry.group.dwt.dependencies]
pywavelets = "^1.9.0"

